Additional fixes for double scrollbars of modals.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -171,6 +171,7 @@ a[data-toggle="modal"]
     width: 100%
   
 .modal
+  overflow: hidden !important
   .wait
     h3 
       text-align: center
